# AI-Sourcing-Agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.hf  PLAN.md  PROJECT_STATUS_REPORT.md  README.md  TESTING_FINDINGS.md  TEST_COVERAGE_SUMMARY.md  ai-sourcing-agent-notion.md  alembic.ini  deployment.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  e2e_audit.py  entrypoint.hf.sh  entrypoint.sh  gemini-code-1780390634144.md  landed_cost_calculator.jsx  package-lock.json  package.json  plan-ai-sourcing-hub-2026.json  pyproject.toml  railway.json  requirements.txt  skills-lock.json  tariff-report.xlsx  tokens.ts
.github/workflows/: ci.yml
AI-Sourcing Hub Master PRD & Wiki/: Conduct the Analyses & Empirical Findings 388340cd713c80298d5ecb742179b47f.md  Develop Recommendations & Action Plan 389340cd713c80479c5dfc2323194504.md  Problem Structuring & MECE Issue Tree 388340cd713c8037852ef53228855598.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_client_id_to_rfqs.py  003_make_agent_id_nullable.py  009_add_chat_tables.py  (+16 more)
app/: __init__.py  config.py  main.py
docs/: hf-spaces-env.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: .env.example  debug1.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
handoff/: CLAUDE.md  PROMPT_FOR_CLAUDE_CODE.md  supplier-home-desktop.html  tailwind.config.snippet.ts
handoff-designs/: pricing-calculator-mobile.html
lib/: tokens.ts
nginx/: Dockerfile  nginx.conf
plans/: ai-sourcing-hub-tech-doc-review.md  ai-sourcing-hub-technical-documentation-v1.1.md  arabic-technical-doc-plan.md  b2b-marketplace-auth-refactor.md  bug-remediation-plan.md  course-correction-todo.md  current-project-status.md  file-organization-plan.md  frontend-architecture-plan.md  frontend-jcap-ui-changes.md  interactive-onboarding-plan.md  jcap-pricing-refactor-plan.md  next-steps-plan.md  paddleocr-replacement-plan.md  standalone-calculator-analysis.md  supplier-quotation-methodology.md  task3-supplier-rfq-inbox.md  user-workflow-documentation.md
scripts/: backup.sh  entrypoint.sh  populate_chroma.py  scratch_catalog_data.py  seed_catalog_products.py  seed_demo_agent.py  seed_demo_rfqs.py  seed_demo_users.py  seed_hs_code_schedules.py  seed_pricing_rules.py
tests/: __init__.py  conftest.py  test_config.py
(+493 files in other folders)
